encapsulation some element

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       </div>
       <hr />
       <img id="today-news" class="mx-auto h-20 w-80 my-5 border-0" />
-      <news-list class="today-list flex flex-wrap justify-center gap-2"> </news-list>
+      <news-list class="flex flex-wrap justify-center gap-2"> </news-list>
     </main>
     <footer class="w-full bg-slate-800 text-center py-5">
       <bottom-bar></bottom-bar>
