add CNN and CNBC

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
       <app-bar></app-bar>
       <nav id="drawer-nav">
         <button class="btn-portal" value="antara">Antara</button>
+        <button class="btn-portal" value="cnbc">CNBC</button>
+        <button class="btn-portal" value="cnn">CNN</button>
         <button class="btn-portal" value="jpnn">JPNN</button>
         <button class="btn-portal" value="kumparan">Kumparan</button>
         <button class="btn-portal" value="okezone">OkZone</button>
@@ -26,6 +28,8 @@
     <main class="relative">
       <div class="flex justify-center gap-3 flex-wrap my-5" id="list-btn">
         <btn-portal value="antara" name="Antara"></btn-portal>
+        <btn-portal value="cnbc" name="CNBC"></btn-portal>
+        <btn-portal value="cnn" name="CNN"></btn-portal>
         <btn-portal value="jpnn" name="JPNN"></btn-portal>
         <btn-portal value="kumparan" name="Kumparan"></btn-portal>
         <btn-portal value="okezone" name="OkZone"></btn-portal>
